--- a/HomeApp.Site/Areas/Office/Views/Shared/_Layout.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Shared/_Layout.cshtml
@@ -63,6 +63,6 @@
     <script src="~/vendors/roost/vendors/bower_components/jquery-placeholder/jquery.placeholder.min.js"></script>
     <![endif]-->
     <!-- Site functions and actions -->
-<script src="~/vendors/roost/js/app.min.js"></script>
+<script src="~/vendors/roost/js/app.js"></script>
 </body>
 </html>
