--- a/HomeApp.Site/Areas/Office/Views/Profile/SetRealtorProfile.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetRealtorProfile.cshtml
@@ -38,36 +38,36 @@
                             @foreach (object val in Enum.GetValues(typeof(UnitCategory)))
                             {
                                 UnitCategory unitCategory = (UnitCategory)val;
-                                if (unitCategory == UnitCategory.None) {continue;}
+                                if (unitCategory == UnitCategory.None) { continue; }
                                 <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
                             }
                         </select>
                     </div>
-                    
+
                     <div class="form-group">
                         <label style="font-size: 13px;"><b style="color:#03A9F4">Продажа</b>, выберите типы недвижимости продажей которых вы занимаетесь</label>
                         <select class="select2" multiple>
                             @foreach (object val in Enum.GetValues(typeof(UnitCategory)))
                             {
                                 UnitCategory unitCategory = (UnitCategory)val;
-                                if (unitCategory == UnitCategory.None) {continue;}
+                                if (unitCategory == UnitCategory.None) { continue; }
                                 <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
                             }
                         </select>
                     </div>
-                    
+
                     <div class="form-group">
                         <label style="font-size: 13px;">Укажите услуги, которые вы хотите предоставлять</label>
                         <select class="select2" multiple>
                             @foreach (object val in Enum.GetValues(typeof(AddService)))
                             {
                                 AddService addService = (AddService)val;
-                                if (addService == AddService.None || addService == AddService.Credit || addService == AddService.Development || addService == AddService.Mortgage) {continue;}
+                                if (addService == AddService.None || addService == AddService.Credit || addService == AddService.Development || addService == AddService.Mortgage) { continue; }
                                 <option value="@addService">@addService.ToLocalString(Language.Ru).Single</option>
                             }
                         </select>
                     </div>
-                    
+
                     <div class="form-group form-group--float form-group--float-center">
                         <input type="text" class="form-control text-center">
                         <i class="form-group__bar"></i>
@@ -105,4 +105,11 @@
 @section Styles
     {
     <link rel="stylesheet" href="~/css/profile.css" />
+}
+
+@section Scripts
+    {
+    <script type="text/javascript">
+        autosize($('textarea'));
+    </script>
 }
