--- a/HomeApp.Site/Areas/Office/Views/Profile/SetSocial.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetSocial.cshtml
@@ -14,37 +14,38 @@
                     <small>Укажите ваши странички в социальных сетях для SEO оптимизации. Пользователям будет проще найти вас!</small>
                 </div>
                 <form class="card__body" asp-area="Office" asp-controller="Profile" asp-action="SetSocial" method="post" id="social">
-
+                    <input type="hidden" name="UserType" value="@Model.UserType"/>
+                    <input type="hidden" name="UserId" value="@Model.UserId"/>
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="Facebook">
                         <i class="form-group__bar"></i>
                         <label>Фейсбук</label>
                     </div>
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="Twitter">
                         <i class="form-group__bar"></i>
                         <label>Твиттер</label>
                     </div>
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="GooglePlus">
                         <i class="form-group__bar"></i>
                         <label>Гугл плюс</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="Vk">
                         <i class="form-group__bar"></i>
                         <label>Вконтакте</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="Ok">
                         <i class="form-group__bar"></i>
                         <label>Однокласники</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" class="form-control text-center" asp-for="Instagram">
                         <i class="form-group__bar"></i>
                         <label>Инстаграм</label>
                     </div>
