--- a/HomeApp.Site/Areas/Office/Views/Profile/SetPersonProfile.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetPersonProfile.cshtml
@@ -41,7 +41,7 @@
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="date" name="DateBirth" value="@Model.DateBirth" class="form-control text-center">
+                        <input type="date" name="DateBirth" value="@Model.DateBirth?.ToString("yyyy-MM-dd")" class="form-control text-center">
                         <i class="form-group__bar"></i>
                         <label>Дата рождения</label>
                     </div>
