--- a/HomeApp.Site/Areas/Office/Views/Profile/SetRealtorProfile.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Profile/SetRealtorProfile.cshtml
@@ -15,17 +15,19 @@
                     <small>Поля помеченные звездочкой (*) являются обязательными для заполнения!</small>
                 </div>
                 <form class="card__body" asp-area="Office" asp-controller="Profile" asp-action="SetRealtorProfile" method="post" id="person-prof-form">
+                    <input type="hidden" asp-for="UserId"/>
+                    <input type="hidden" asp-for="UserType"/>
                     <div class="row">
                         <div class="col-sm-6">
                             <div class="form-group form-group--float form-group--float-center">
-                                <input type="text" class="form-control text-center">
+                                <input type="text" asp-for="Job.Ru" class="form-control text-center">
                                 <i class="form-group__bar"></i>
                                 <label>Где вы работаете?</label>
                             </div>
                         </div>
                         <div class="col-sm-6">
                             <div class="form-group form-group--float form-group--float-center">
-                                <input type="number" class="form-control text-center">
+                                <input type="number" asp-for="FromYear" class="form-control text-center">
                                 <i class="form-group__bar"></i>
                                 <label>С какого года работаете?</label>
                             </div>
@@ -33,61 +35,96 @@
                     </div>
 
                     <div class="form-group">
-                        <label style="font-size: 13px;"><b style="color:#03A9F4">Аренда</b>, выберите типы недвижимости арендой которых вы занимаетесь</label>
-                        <select class="select2" multiple>
+                        <label style="font-size: 13px;"><b style="color: #03A9F4">Аренда</b>, выберите типы недвижимости арендой которых вы занимаетесь</label>
+                        <select name="RentalProperties" class="select2" multiple>
                             @foreach (object val in Enum.GetValues(typeof(UnitCategory)))
                             {
-                                UnitCategory unitCategory = (UnitCategory)val;
-                                if (unitCategory == UnitCategory.None) { continue; }
-                                <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                UnitCategory unitCategory = (UnitCategory) val;
+                                if (unitCategory == UnitCategory.None)
+                                {
+                                    continue;
+                                }
+
+                                if (Model.RentalProperties?.Contains(unitCategory) == true)
+                                {
+                                    <option value="@unitCategory" selected="selected">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                }
+                                else
+                                {
+                                    <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                }
+
+
                             }
                         </select>
                     </div>
 
                     <div class="form-group">
-                        <label style="font-size: 13px;"><b style="color:#03A9F4">Продажа</b>, выберите типы недвижимости продажей которых вы занимаетесь</label>
-                        <select class="select2" multiple>
+                        <label style="font-size: 13px;"><b style="color: #03A9F4">Продажа</b>, выберите типы недвижимости продажей которых вы занимаетесь</label>
+                        <select name="EstateSales" class="select2" multiple>
                             @foreach (object val in Enum.GetValues(typeof(UnitCategory)))
                             {
-                                UnitCategory unitCategory = (UnitCategory)val;
-                                if (unitCategory == UnitCategory.None) { continue; }
-                                <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                UnitCategory unitCategory = (UnitCategory) val;
+                                if (unitCategory == UnitCategory.None)
+                                {
+                                    continue;
+                                }
+
+                                if (Model.EstateSales?.Contains(unitCategory) == true)
+                                {
+                                    <option value="@unitCategory" selected="selected">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                }
+                                else
+                                {
+                                    <option value="@unitCategory">@unitCategory.ToLocalString(Language.Ru).Single</option>
+                                }
                             }
                         </select>
                     </div>
 
                     <div class="form-group">
                         <label style="font-size: 13px;">Укажите услуги, которые вы хотите предоставлять</label>
-                        <select class="select2" multiple>
+                        <select name="AddServices" class="select2" multiple>
                             @foreach (object val in Enum.GetValues(typeof(AddService)))
                             {
-                                AddService addService = (AddService)val;
-                                if (addService == AddService.None || addService == AddService.Credit || addService == AddService.Development || addService == AddService.Mortgage) { continue; }
-                                <option value="@addService">@addService.ToLocalString(Language.Ru).Single</option>
+                                AddService addService = (AddService) val;
+                                if (addService == AddService.None || addService == AddService.Credit || addService == AddService.Development || addService == AddService.Mortgage)
+                                {
+                                    continue;
+                                }
+
+                                if (Model.AddServices?.Contains(addService) == true)
+                                {
+                                    <option value="@addService" selected="selected">@addService.ToLocalString(Language.Ru).Single</option>
+                                }
+                                else
+                                {
+                                    <option value="@addService">@addService.ToLocalString(Language.Ru).Single</option>
+                                }
                             }
                         </select>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" asp-for="WorkRegions.Ru" class="form-control text-center">
                         <i class="form-group__bar"></i>
                         <label>Укажите города в которых вы работаете.</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" asp-for="Education.Ru" class="form-control text-center">
                         <i class="form-group__bar"></i>
                         <label>Образование</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <input type="text" class="form-control text-center">
+                        <input type="text" asp-for="Site" class="form-control text-center">
                         <i class="form-group__bar"></i>
                         <label>Сайт</label>
                     </div>
 
                     <div class="form-group form-group--float form-group--float-center">
-                        <textarea class="form-control"></textarea>
+                        <textarea asp-for="Description.Ru" class="form-control"></textarea>
                         <i class="form-group__bar"></i>
                         <label>О себе</label>
                     </div>
