--- a/HomeApp.Site/Areas/Office/Views/Home/Index.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Home/Index.cshtml
@@ -1,15 +1,20 @@
-﻿<div class="main__container">
-    <header class="main__title">
-        <h2>Главная</h2>
-        <small>Ваши активности и статистика</small>
-    </header>
-    <div class="card">
-        <div class="card__header">
-            @*<h2>Главная</h2>
+﻿<div class="action-header-alt">
+    <a class="action-header__item action-header__back" href="listings.html">
+        <i class="zmdi zmdi-long-arrow-left"></i>
+        Back to listings
+    </a>
+</div>
+<header class="main__title">
+    <h2>Главная</h2>
+    <small>Ваши активности и статистика</small>
+</header>
+<div class="card">
+    <div class="card__header">
+        @*<h2>Главная</h2>
             <small>Ваши активности и статистика</small>*@
-        </div>
-        <div class="card__body">
-            <p>У вас еще нет активностей!</p>
-        </div>
+    </div>
+    <div class="card__body">
+        <p>У вас еще нет активностей!</p>
     </div>
 </div>
+
