--- a/HomeApp.Site/Areas/Office/Views/Shared/MainMenuPartial.cshtml
+++ b/HomeApp.Site/Areas/Office/Views/Shared/MainMenuPartial.cshtml
@@ -1,22 +1,13 @@
-﻿@if (ViewContext.RouteData.Values["controller"].ToString() != "Profile")
-{
-    <aside id="main__sidebar">
+﻿<aside id="main__sidebar">
         <a class="hidden-lg main__block-close" href="" data-rmd-action="block-close" data-rmd-target="#main__sidebar">
             <i class="zmdi zmdi-long-arrow-left"></i>
         </a>
         <ul class="main-menu">
-            <li><a target="_blank" href="../index.html"><i class="zmdi zmdi-home"></i> Home</a></li>
-            <li class="active"><a href="index.html"><i class="zmdi zmdi-chart"></i> Analytics</a></li>
-            <li><a href="listings.html"><i class="zmdi zmdi-view-list"></i> Listings</a></li>
-            <li><a href="leads.html"><i class="zmdi zmdi-assignment "></i> Leads</a></li>
-            <li><a href="tasks-lists.html"><i class="zmdi zmdi-check-circle"></i> Tasks Lists</a></li>
-            <li><a href="contacts.html"><i class="zmdi zmdi-account-box"></i> Contacts</a></li>
-            <li><a href="notes.html"><i class="zmdi zmdi-file-text"></i> Notes</a></li>
-            <li><a href="calendar.html"><i class="zmdi zmdi-calendar"></i> Calendar</a></li>
-            <li><a href="questions-answers.html"><i class="zmdi zmdi-help"></i> Questions & Answers</a></li>
-            <li><a href="activity-log.html"><i class="zmdi zmdi-time"></i> Activity Log</a></li>
+            <li class="active"><a href="index.html"><i class="zmdi zmdi-city-alt"></i> Мои объявления</a></li>
+            <li><a href="listings.html"><i class="zmdi zmdi-collection-plus"></i> Добавить объявление</a></li>
+            <li><a href="leads.html"><i class="zmdi zmdi-archive"></i> Архив</a></li>
         </ul>
     </aside>
-}
+
 
 
